--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Meus objetivos do ano</title>
 </head>
 <body>
-   <section class="conteudo-principal">
-    
-   </section>
+   <section class="conteudo-principal"></section>
+   <h2 class="titulo">meus objetivos do ano
+    <span>_</span></h2>
+    <div class="botoes"></div>
+    <button class="botao">cursos alura</button>
+    <button class="botao">criar projetos em javascript</button>
+    <button class="botao">criar um portofólio</button>
+    <button class="botao">atualizar meu</button>
 </body>
 </html>
